GearsetPOC/force-app/main/default/objects/Activity/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Target_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agency visit</fullName>
            </value>
            <value>
                <fullName>Client visit</fullName>
            </value>
            <value>
                <fullName>Contact e-mail/phone</fullName>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Eductour</fullName>
            </value>
            <value>
                <fullName>Event/Networking</fullName>
            </value>
            <value>
                <fullName>Follow up on SLA / PAC</fullName>
            </value>
            <value>
                <fullName>Sending Contract</fullName>
            </value>
            <value>
                <fullName>Sending Proposal</fullName>
            </value>
            <value>
                <fullName>Speed Meeting</fullName>
            </value>
            <value>
                <fullName>Sponsoring</fullName>
            </value>
            <value>
                <fullName>Tradefair</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>