GearsetPOC/force-app/main/default/objects/Activity/fields/Action_Done_With__c.field-meta.xml
<CustomField>
    <fullName>Action_Done_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Done With</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>