GearsetPOC/force-app/main/default/objects/Activity/fields/At_which_station_will_they_alight__c.field-meta.xml
<CustomField>
    <fullName>At_which_station_will_they_alight__c</fullName>
    <description>At which station will they alight?</description>
    <label>At which station will they alight?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>