GearsetPOC/force-app/main/default/objects/Activity/fields/Attendees_for_the_meeting__c.field-meta.xml
<CustomField>
    <fullName>Attendees_for_the_meeting__c</fullName>
    <label>Attendees for the meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>