GearsetPOC/force-app/main/default/objects/Activity/fields/Custom_Legacy_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Legacy_Account_Number__c</fullName>
    <label>Custom Legacy Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>