GearsetPOC/force-app/main/default/objects/Activity/fields/Customer_Struggle__c.field-meta.xml
<CustomField>
    <fullName>Customer_Struggle__c</fullName>
    <label>Customer Struggle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seating Issues</fullName>
            </value>
            <value>
                <fullName>Couldn&#39;t Find</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t Receive A Confirmation</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Understand How To Do This Online</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Want To Do This Online</fullName>
            </value>
            <value>
                <fullName>No Access To Website</fullName>
            </value>
            <value>
                <fullName>Eurostar Error</fullName>
            </value>
            <value>
                <fullName>Form Of Payment Not Online</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Not An Online Product Or Not Refundable Online</fullName>
            </value>
            <value>
                <fullName>Outside Booking Horizon</fullName>
            </value>
            <value>
                <fullName>Website error</fullName>
            </value>
            <value>
                <fullName>Loyalty issue</fullName>
            </value>
            <value>
                <fullName>Customer error</fullName>
            </value>
            <value>
                <fullName>AOP issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>