GearsetPOC/force-app/main/default/objects/Activity/fields/Does_the_dog_have_documents__c.field-meta.xml
<CustomField>
    <fullName>Does_the_dog_have_documents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the dog have an Eu Pet passport, Animal Health certificate, or pet health certificate?</description>
    <inlineHelpText>Does the dog have an Eu Pet passport, Animal Health certificate, or pet health certificate?</inlineHelpText>
    <label>Does the dog have documents?</label>
    <type>Checkbox</type>
</CustomField>