GearsetPOC/force-app/main/default/objects/Activity/fields/External_email_addresses__c.field-meta.xml
<CustomField>
    <fullName>External_email_addresses__c</fullName>
    <inlineHelpText>A comma-separated string with email addresses.</inlineHelpText>
    <label>External email addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>