GearsetPOC/force-app/main/default/objects/Activity/fields/Has_the_dog_been_approved_to_travel__c.field-meta.xml
<CustomField>
    <fullName>Has_the_dog_been_approved_to_travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the dog been approved to travel on Eurostar?</description>
    <inlineHelpText>Has the dog been approved to travel on Eurostar?</inlineHelpText>
    <label>Has the dog been approved to travel?</label>
    <type>Checkbox</type>
</CustomField>