GearsetPOC/force-app/main/default/objects/Activity/fields/Has_the_dog_got_a_microchip__c.field-meta.xml
<CustomField>
    <fullName>Has_the_dog_got_a_microchip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the dog got a microchip?</description>
    <label>Has the dog got a microchip?</label>
    <type>Checkbox</type>
</CustomField>