GearsetPOC/force-app/main/default/objects/Activity/fields/Initial_Reason_For_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reason_For_Contact__c</fullName>
    <label>Initial Reason For Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy or Book</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Cancel or Refund</fullName>
            </value>
            <value>
                <fullName>Info or Advice or Confirmation</fullName>
            </value>
            <value>
                <fullName>Disruption or Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>