GearsetPOC/force-app/main/default/objects/Activity/fields/Is_the_name_of_the_owner_the_same__c.field-meta.xml
<CustomField>
    <fullName>Is_the_name_of_the_owner_the_same__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the name of the owner the same as the EU pet passport or (animal/pet) health certificate?</description>
    <inlineHelpText>Is the name of the owner the same as the EU pet passport or (animal/pet) health certificate?</inlineHelpText>
    <label>Is the name of the owner the same?</label>
    <type>Checkbox</type>
</CustomField>