GearsetPOC/force-app/main/default/objects/Activity/fields/Number_of_Persons__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Persons__c</fullName>
    <label>Number of Persons</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>