GearsetPOC/force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Dropped Before Resolution</fullName>
            </value>
            <value>
                <fullName>Completed Request</fullName>
            </value>
            <value>
                <fullName>Completed Request - GWG</fullName>
            </value>
            <value>
                <fullName>Couldn&#39;t Complete The Request</fullName>
            </value>
            <value>
                <fullName>Customer Abandoned Request</fullName>
            </value>
            <value>
                <fullName>Customer failed security checks</fullName>
            </value>
            <value>
                <fullName>Customer Just Wanted A Quote</fullName>
            </value>
            <value>
                <fullName>Directed Customer Back To Original Point Of Sale</fullName>
            </value>
            <value>
                <fullName>Directed Customer Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>