GearsetPOC/force-app/main/default/objects/Activity/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>