GearsetPOC/force-app/main/default/objects/Activity/fields/Target_Group__c.field-meta.xml
<CustomField>
    <fullName>Target_Group__c</fullName>
    <label>Target Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Corporate</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>AGV Loisirs/TO/MICE</fullName>
            </value>
            <value>
                <fullName>Distributeur</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>