GearsetPOC/force-app/main/default/objects/Activity/fields/Team_Creator__c.field-meta.xml
<CustomField>
    <fullName>Team_Creator__c</fullName>
    <formula>IF(ISBLANK(CreatedBy.ManagerId),
  CreatedBy.FirstName+&quot; &quot;+CreatedBy.LastName,
  CreatedBy.Manager.FirstName+&quot; &quot;+CreatedBy.Manager.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Creator</label>
    <type>Text</type>
</CustomField>