GearsetPOC/force-app/main/default/objects/Activity/fields/Tone_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tone_of_Contact__c</fullName>
    <label>Tone of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Praise</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>