GearsetPOC/force-app/main/default/objects/Activity/fields/Was_the_dog_tattooed_before__c.field-meta.xml
<CustomField>
    <fullName>Was_the_dog_tattooed_before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the dog hasn&#39;t got a microchip was the dog tattooed before 3/07/11?</description>
    <inlineHelpText>If the dog hasn&#39;t got a microchip was the dog tattooed before 3/07/11?</inlineHelpText>
    <label>Was the dog tattooed before 3/07/11?</label>
    <type>Checkbox</type>
</CustomField>